Un-implemented attribute code speeds up code generation (wip)